<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/tag_real_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/TextView_kb"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/list_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/TextView_kb"
                android:orientation="horizontal">

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="#6E7B8B" />

                <!--android:layout_width="wrap_content"-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tag_real_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#63a219"
                    android:dividerHeight="1px"
                    android:fadingEdge="none"
                    android:paddingLeft="3.0sp"
                    android:paddingRight="3.0sp"
                    android:scrollbars="vertical"
                    android:scrollingCache="false"
                    android:transcriptMode="alwaysScroll" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/TextView_kb"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/horizontalScrollView1"
        android:layout_centerHorizontal="true"
        android:background="@color/SteelBlue3" />

    <LinearLayout
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/scanlayout1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/number"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_num"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/DodgerBlue"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/scantime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ttime"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_time"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/DodgerBlue"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_errorcount"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/DodgerBlue"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/txt_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0(t/s)" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/scanlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_scan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/color_button_selector"
                android:gravity="center"
                android:text="@string/btscan"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>